# Quantum-Chain

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  FINDINGS.md  PRODUCTION-READY.md  README.md  REMIND.md  RUNNING-LOCALLY.md  clippy.toml  deny.toml  docker-compose.dev.yml  rustfmt.toml
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: brutal_benchmarks.rs
crates/benchmarks/benches/brutal/: mod.rs  qc_01_peer_discovery.rs  qc_02_block_storage.rs  qc_03_tx_indexing.rs  qc_04_state_mgmt.rs  qc_06_mempool.rs  qc_07_bloom_filters.rs
crates/benchmarks/src/: lib.rs
crates/integration-tests/: Cargo.toml  FINDINGS.md
crates/integration-tests/src/: e2e_choreography.rs  flows.rs  lib.rs  runtime_simulation.rs
crates/integration-tests/src/exploits/: mod.rs  phase1_exploits.rs
crates/node-runtime/: ARCHITECTURE_EXEMPTION.md  Cargo.toml  README.md
crates/node-runtime/src/: lib.rs  main.rs
crates/node-runtime/src/adapters/: api_gateway.rs  block_storage.rs  consensus.rs  cross_chain.rs  event_bus.rs  finality.rs  ipc_receiver.rs  light_client.rs  mempool.rs  mod.rs  peer_discovery.rs  replay_cache.rs  sharding.rs  signature.rs  state.rs  transaction_indexing.rs  transaction_ordering.rs
crates/node-runtime/src/container/: config.rs  mod.rs  subsystems.rs
crates/node-runtime/src/genesis/: builder.rs  mod.rs
crates/node-runtime/src/handlers/: api_query.rs  choreography.rs  mod.rs  signature_verification.rs
crates/node-runtime/src/registry/: mod.rs
crates/node-runtime/src/wiring/: core_subsystems.rs  event_routing.rs  mod.rs
crates/node-runtime/tests/: ipc_integration_test.rs
crates/qc-01-peer-discovery/: Cargo.toml  README.md  TODO.md
crates/qc-01-peer-discovery/src/: lib.rs  service.rs  test_utils.rs  testing.rs
crates/qc-01-peer-discovery/src/adapters/: api_handler.rs  bootstrap_handler.rs  feeler.rs  mod.rs  network.rs  publisher.rs  security.rs  subscriber.rs
crates/qc-01-peer-discovery/src/domain/: address_manager.rs  connection_slots.rs  enr.rs  entities.rs  errors.rs  feeler.rs  handshake.rs  mod.rs  peer_score.rs  routing_table.rs  services.rs  value_objects.rs
crates/qc-01-peer-discovery/src/ipc/: bootstrap.rs  handler.rs  mod.rs  payloads.rs  security.rs  verify_node_identity.rs
crates/qc-01-peer-discovery/src/ports/: inbound.rs  mod.rs  outbound.rs
crates/qc-01-peer-discovery/src/service/: api.rs  core.rs  events.rs  maintenance.rs  mod.rs  tests.rs
crates/qc-01-peer-discovery/src/transport/: mod.rs  quic.rs
crates/qc-02-block-storage/: Cargo.toml  README.md  TODO.md
crates/qc-02-block-storage/src/: lib.rs  service.rs  test_utils.rs
crates/qc-02-block-storage/src/adapters/: api_handler.rs  lock.rs  mod.rs
crates/qc-02-block-storage/src/bus/: adapter.rs  mod.rs
crates/qc-03-transaction-indexing/: Cargo.toml  README.md  TODO.md
crates/qc-03-transaction-indexing/src/: lib.rs
crates/qc-03-transaction-indexing/tests/: brutal_security.rs
crates/qc-04-state-management/: Cargo.toml  README.md  TODO.md
crates/qc-04-state-management/src/: lib.rs
crates/qc-05-block-propagation/: Cargo.toml  README.md  TODO.md
crates/qc-05-block-propagation/src/: lib.rs  service.rs
crates/qc-06-mempool/: Cargo.toml  README.md  TODO.md
crates/qc-06-mempool/src/: lib.rs
crates/qc-07-bloom-filters/: Cargo.toml
crates/qc-07-bloom-filters/src/: error.rs  lib.rs  metrics.rs
crates/qc-08-consensus/: Cargo.toml  TODO.md
crates/qc-08-consensus/src/: lib.rs  metrics.rs  service.rs  state.rs  validation.rs
crates/qc-09-finality/: Cargo.toml  README.md  TODO.md
crates/qc-09-finality/src/: error.rs  lib.rs  metrics.rs  service.rs  state.rs  types.rs
crates/qc-10-signature-verification/: Cargo.toml  README.md  TODO.md
crates/qc-10-signature-verification/fuzz/: Cargo.toml
crates/qc-10-signature-verification/src/: lib.rs  service.rs
crates/qc-11-smart-contracts/: Cargo.toml  TODO.md
crates/qc-11-smart-contracts/src/: errors.rs  events.rs  lib.rs  service.rs
crates/qc-12-transaction-ordering/: Cargo.toml  TODO.md
crates/qc-12-transaction-ordering/src/: config.rs  lib.rs
crates/qc-13-light-client-sync/: Cargo.toml  TODO.md
crates/qc-13-light-client-sync/src/: config.rs  lib.rs
crates/qc-14-sharding/: Cargo.toml  TODO.md
crates/qc-14-sharding/src/: lib.rs
crates/qc-15-cross-chain/: Cargo.toml  TODO.md
crates/qc-15-cross-chain/src/: lib.rs
crates/qc-16-api-gateway/: Cargo.toml  README.md
crates/qc-16-api-gateway/src/: lib.rs  router.rs  service.rs
crates/qc-17-block-production/: API.md  CHECK.sh  Cargo.toml
crates/qc-17-block-production/src/: config.rs  error.rs  lib.rs  metrics.rs  security.rs  service.rs
crates/qc-compute/: Cargo.toml  README.md
crates/qc-compute/src/: lib.rs
crates/qc-zkp/: Cargo.toml
crates/qc-zkp/src/: commitment.rs  errors.rs  field.rs  lib.rs  polynomial.rs  proof.rs
crates/quantum-telemetry/: Cargo.toml
crates/quantum-telemetry/src/: config.rs  context.rs  lib.rs  logging.rs  metrics.rs  tracing_setup.rs
crates/shared-bus/: Cargo.toml  README.md  TODO.md
crates/shared-bus/src/: events.rs  lib.rs  nonce_cache.rs  publisher.rs  subscriber.rs
crates/shared-crypto/: Cargo.toml
crates/shared-crypto/src/: bls.rs  ecdsa.rs  errors.rs  hashing.rs  lib.rs  signatures.rs  symmetric.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: entities.rs  envelope.rs  errors.rs  ipc.rs  lib.rs  rate_limiter.rs  security.rs  subsystem_registry.rs  subsystem_trait.rs
tests/: Cargo.toml  README.md
tests/benches/: brutal_benchmarks.rs  subsystem_benchmarks.rs
tests/src/: lib.rs
tests/src/benchmarks/: mod.rs  qc_01_peer_discovery.rs  qc_02_block_storage.rs  qc_03_tx_indexing.rs  qc_04_state_mgmt.rs  qc_06_mempool.rs  qc_07_bloom_filters.rs  qc_08_consensus.rs  qc_10_signature.rs
tests/src/exploits/: helpers.rs  mod.rs
tests/src/integration/: e2e_choreography.rs  mod.rs  runtime_simulation.rs
tools/qc-admin/: Cargo.toml  README.md
tools/qc-admin/src/: lib.rs  main.rs
tools/qc-tui/: Cargo.toml
tools/qc-tui/src/: app.rs  main.rs
(+785 files in other folders)
