# ==============================================================================
# Quantum-Chain Workspace
# ==============================================================================
# A Rust-based blockchain system with quantum-inspired architecture.
# This workspace contains all crates for the node runtime.
# ==============================================================================

[workspace]
resolver = "2"
members = [
    "crates/node-runtime", "crates/qc-01-peer-discovery", "crates/qc-02-block-storage", "crates/qc-03-transaction-indexing", "crates/qc-04-state-management", "crates/qc-05-block-propagation", "crates/qc-06-mempool", "crates/qc-07-bloom-filters", "crates/qc-08-consensus", "crates/qc-09-finality", "crates/qc-10-signature-verification", "crates/qc-11-smart-contracts", "crates/qc-12-transaction-ordering", "crates/qc-13-light-client-sync", "crates/qc-14-sharding", "crates/qc-15-cross-chain",
    "crates/shared-types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Quantum-Chain Contributors"]
license = "Unlicense"
repository = "https://github.com/NerfedChou/Quantum-Chain"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.34", features = ["full"] }

# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.1"

# Unique Identifiers
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Internal Crates
shared-types = { path = "crates/shared-types" }
