# ==============================================================================
# Quantum-Chain Workspace
# ==============================================================================
# A Rust-based blockchain system with quantum-inspired architecture.
# This workspace contains all crates for the node runtime.
# ==============================================================================

[workspace]
resolver = "2"
members = [
    "crates/node-runtime", "crates/qc-01-peer-discovery", "crates/qc-02-block-storage", "crates/qc-03-transaction-indexing", "crates/qc-04-state-management", "crates/qc-05-block-propagation", "crates/qc-06-mempool", "crates/qc-07-bloom-filters", "crates/qc-08-consensus", "crates/qc-09-finality", "crates/qc-10-signature-verification", "crates/qc-11-smart-contracts", "crates/qc-12-transaction-ordering", "crates/qc-13-light-client-sync", "crates/qc-14-sharding", "crates/qc-15-cross-chain",
    "crates/shared-bus",
    "crates/shared-types",
    "crates/integration-tests",
    "crates/benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Quantum-Chain Contributors"]
license = "Unlicense"
repository = "https://github.com/NerfedChou/Quantum-Chain"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
bincode = "1.3"

# Async Runtime
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
ed25519-dalek = "2.1"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
blst = "0.3"

# Primitives (U256, etc.)
primitive-types = { version = "0.12", features = ["serde"] }

# Parallelism
rayon = "1.10"

# Unique Identifiers
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Streaming
tokio-stream = "0.1"

# Testing
rand = "0.8"

# Production Storage
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }
fs2 = "0.4"

# Internal Crates
shared-types = { path = "crates/shared-types" }
shared-bus = { path = "crates/shared-bus" }
