[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# Internal crates for integration testing
qc-01-peer-discovery = { path = "../qc-01-peer-discovery" }
qc-02-block-storage = { path = "../qc-02-block-storage" }
qc-03-transaction-indexing = { path = "../qc-03-transaction-indexing" }
qc-04-state-management = { path = "../qc-04-state-management" }
qc-06-mempool = { path = "../qc-06-mempool" }
qc-07-bloom-filters = { path = "../qc-07-bloom-filters" }
qc-08-consensus = { path = "../qc-08-consensus" }
qc-09-finality = { path = "../qc-09-finality" }
qc-10-signature-verification = { path = "../qc-10-signature-verification" }
qc-16-api-gateway = { path = "../qc-16-api-gateway" }
qc-17-block-production = { path = "../qc-17-block-production" }
shared-bus = { path = "../shared-bus" }
shared-types = { path = "../shared-types" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Concurrency
parking_lot = "0.12"

# Testing utilities
rand = { workspace = true }
uuid = { workspace = true }

# Primitives
primitive-types = { workspace = true }

# Cryptography for benchmark and exploit tests
k256 = { workspace = true }
sha3 = { workspace = true }
secp256k1 = { version = "0.29", features = ["recovery", "rand-std"] }
hex = "0.4"

# Serialization for IPC tests
bincode = "1.3"

# For futures join_all
futures = "0.3"

# RLP for API Gateway transaction tests
rlp = "0.5"

[dev-dependencies]
criterion = "0.5"
