# ==============================================================================
# Node Runtime Crate
# ==============================================================================
# The main executable for the Quantum-Chain node. This crate initializes and
# orchestrates all subsystems according to the Architecture.md specifications.
# ==============================================================================

[package]
name = "node-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "node-runtime"
path = "src/main.rs"

[lib]
name = "node_runtime"
path = "src/lib.rs"

[features]
default = []
# Enable RocksDB for production storage (requires librocksdb-dev)
rocksdb = ["dep:rocksdb"]

[dependencies]
# Internal crates - Core subsystems
shared-types.workspace = true
shared-bus = { path = "../shared-bus" }
quantum-telemetry = { path = "../quantum-telemetry" }
qc-01-peer-discovery = { path = "../qc-01-peer-discovery" }
qc-02-block-storage = { path = "../qc-02-block-storage" }
qc-03-transaction-indexing = { path = "../qc-03-transaction-indexing" }
qc-04-state-management = { path = "../qc-04-state-management" }
qc-05-block-propagation = { path = "../qc-05-block-propagation" }
qc-06-mempool = { path = "../qc-06-mempool" }
qc-08-consensus = { path = "../qc-08-consensus" }
qc-09-finality = { path = "../qc-09-finality" }
qc-10-signature-verification = { path = "../qc-10-signature-verification" }
qc-16-api-gateway = { path = "../qc-16-api-gateway" }
qc-17-block-production = { path = "../qc-17-block-production" }

# Production storage (optional)
rocksdb = { workspace = true, optional = true }
fs2 = { workspace = true }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Synchronization
parking_lot = "0.12"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Cryptography
sha3.workspace = true
primitive-types.workspace = true

# Random number generation
rand = "0.8"

# System information
num_cpus = "1.16"

# Encoding
hex = "0.4"
serde_json.workspace = true
chrono = "0.4"
