# ==============================================================================
# Node Runtime Crate
# ==============================================================================
# The main executable for the Quantum-Chain node. This crate initializes and
# orchestrates all subsystems according to the Architecture.md specifications.
#
# ## Plug-and-Play Architecture
#
# Subsystems are optional features. Enable only what you need:
#   cargo build --features "qc-01,qc-02,qc-08"  # Minimal node
#   cargo build --features "full"                # All subsystems
# ==============================================================================

[package]
name = "node-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "node-runtime"
path = "src/main.rs"

[lib]
name = "node_runtime"
path = "src/lib.rs"

[features]
default = ["full"]

# Full node with all subsystems
full = [
    "qc-01", "qc-02", "qc-03", "qc-04", "qc-05", "qc-06", "qc-07",
    "qc-08", "qc-09", "qc-10", "qc-12", "qc-13", "qc-14", "qc-15", "qc-16", "qc-17"
]

# Individual subsystems (plug-and-play)
qc-01 = ["dep:qc-01-peer-discovery"]           # Peer Discovery
qc-02 = ["dep:qc-02-block-storage"]            # Block Storage (REQUIRED)
qc-03 = ["dep:qc-03-transaction-indexing"]     # Transaction Indexing
qc-04 = ["dep:qc-04-state-management"]         # State Management
qc-05 = ["dep:qc-05-block-propagation"]        # Block Propagation
qc-06 = ["dep:qc-06-mempool"]                  # Mempool
qc-07 = ["dep:qc-07-bloom-filters"]            # Bloom/Cuckoo Filters
qc-08 = ["dep:qc-08-consensus"]                # Consensus (REQUIRED)
qc-09 = ["dep:qc-09-finality"]                 # Finality
qc-10 = ["dep:qc-10-signature-verification"]   # Signature Verification (REQUIRED)
qc-12 = ["dep:qc-12-transaction-ordering"]     # Transaction Ordering
qc-13 = ["dep:qc-13-light-client-sync"]        # Light Client Sync
qc-14 = ["dep:qc-14-sharding"]                 # Sharding
qc-15 = ["dep:qc-15-cross-chain"]              # Cross-Chain
qc-16 = ["dep:qc-16-api-gateway"]              # API Gateway
qc-17 = ["dep:qc-17-block-production"]         # Block Production

# Storage backends
rocksdb = ["dep:rocksdb"]

# GPU compute (auto-detected at runtime)
gpu = ["qc-compute/opencl"]

[dependencies]
# Core infrastructure (always required)
shared-types.workspace = true
shared-bus = { path = "../shared-bus" }
quantum-telemetry = { path = "../quantum-telemetry" }
qc-compute = { path = "../qc-compute" }

# Subsystems (optional - enable via features)
qc-01-peer-discovery = { path = "../qc-01-peer-discovery", optional = true, features = ["full"] }
qc-02-block-storage = { path = "../qc-02-block-storage", optional = true }
qc-03-transaction-indexing = { path = "../qc-03-transaction-indexing", optional = true }
qc-04-state-management = { path = "../qc-04-state-management", optional = true }
qc-05-block-propagation = { path = "../qc-05-block-propagation", optional = true }
qc-06-mempool = { path = "../qc-06-mempool", optional = true }
qc-07-bloom-filters = { path = "../qc-07-bloom-filters", optional = true }
qc-08-consensus = { path = "../qc-08-consensus", optional = true }
qc-09-finality = { path = "../qc-09-finality", optional = true }
qc-10-signature-verification = { path = "../qc-10-signature-verification", optional = true }
qc-12-transaction-ordering = { path = "../qc-12-transaction-ordering", optional = true }
qc-13-light-client-sync = { path = "../qc-13-light-client-sync", optional = true }
qc-14-sharding = { path = "../qc-14-sharding", optional = true }
qc-15-cross-chain = { path = "../qc-15-cross-chain", optional = true }
qc-16-api-gateway = { path = "../qc-16-api-gateway", optional = true }
qc-17-block-production = { path = "../qc-17-block-production", optional = true }

# Production storage (optional)
rocksdb = { workspace = true, optional = true }
fs2 = { workspace = true }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Synchronization
parking_lot = "0.12"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Cryptography
sha2 = "0.10"
sha3.workspace = true
primitive-types.workspace = true

# Random number generation
rand = "0.8"

# System information
num_cpus = "1.16"

# Encoding
hex = "0.4"
serde_json.workspace = true
chrono = "0.4"
uuid = { workspace = true, features = ["v4"] }
