[package]
name = "qc-01-peer-discovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kademlia DHT-based peer discovery for Quantum-Chain"
keywords = ["blockchain", "peer-discovery", "kademlia", "dht"]
categories = ["network-programming", "cryptography"]

# =============================================================================
# FEATURES: Zero mandatory dependencies architecture
# =============================================================================
# The core library (domain, ports, service) has ZERO external dependencies.
# All adapters and integrations are feature-gated for true plug-and-play.

[features]
default = []

# IPC integration with shared event bus (requires shared-types)
# Enables: ipc/handler.rs, ipc/security.rs with MessageVerifier
ipc = ["dep:shared-types", "dep:uuid"]

# RPC/API Gateway integration (JSON responses)
# Enables: adapters/api_handler.rs
rpc = ["dep:serde", "dep:serde_json"]

# Bootstrap handler with correlation ID generation
# Enables: adapters/bootstrap_handler.rs
bootstrap = ["dep:uuid"]

# Network adapters (UDP socket, TOML config)
# Enables: UdpNetworkSocket, TomlConfigProvider
network = ["dep:tokio", "dep:toml", "dep:serde"]

# Test utilities (FixedTimeSource)
test-utils = []

# Full feature set (all adapters enabled)
full = ["ipc", "rpc", "bootstrap", "network", "test-utils"]

# =============================================================================
# DEPENDENCIES: All optional except for core library
# =============================================================================

[dependencies]
# IPC security module (optional - for event bus integration)
shared-types = { path = "../shared-types", optional = true }


# Correlation ID generation (optional - for bootstrap handler)
uuid = { version = "1.0", features = ["v4"], optional = true }

# RPC responses (optional - for API gateway)
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Network adapters (optional)
tokio = { workspace = true, optional = true }
toml = { version = "0.8", optional = true }

[dev-dependencies]
# Testing utilities (always available for tests)
tokio = { workspace = true, features = ["rt", "macros", "time"] }
