[package]
name = "qc-02-block-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Shared types from the workspace
shared-types = { path = "../shared-types" }

# Checksum computation (per SPEC-02)
crc32fast = "1.3"

# Hashing
sha2 = "0.10"

# HMAC for IPC signature verification (IPC-MATRIX.md)
hmac = { workspace = true }

# Serialization for storage
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Time handling
chrono = "0.4"

# UUID for correlation IDs
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
# Testing
tokio = { version = "1", features = ["full", "test-util"] }
