[package]
name = "qc-02-block-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Shared types from the workspace
shared-types = { path = "../shared-types" }

# Checksum computation (per SPEC-02)
crc32fast = "1.3"

# Hashing
sha2 = "0.10"

# HMAC for IPC signature verification (IPC-MATRIX.md)
hmac = { workspace = true }

# Serialization for storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Hex encoding for API responses
hex = "0.4"

# Logging
tracing = "0.1"

# Process locking (cross-platform flock)
fs2 = "0.4"

# Dictionary compression (Phase 3)
zstd = "0.13"

[dev-dependencies]
# Testing
tokio = { version = "1", features = ["full", "test-util"] }
