[package]
name = "qc-02-block-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["full"]

# IPC integration (event bus, envelope validation)
ipc = ["dep:hmac"]

# API Gateway (JSON responses)
api = ["dep:hex"]

# Compression (ZSTD dictionary)
compression = ["dep:zstd"]

# Locking (process-level flock)
locking = ["dep:fs2"]

# Tracing/logging
tracing-log = ["dep:tracing"]

# Full feature set
full = ["ipc", "api", "compression", "locking", "tracing-log"]

[dependencies]
# Core dependencies (always required)
shared-types = { path = "../shared-types" }
crc32fast = "1.3"
sha2 = "0.10"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional dependencies
hmac = { workspace = true, optional = true }
hex = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }
fs2 = { version = "0.4", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
hmac = { workspace = true }
hex = "0.4"
tracing = "0.1"
fs2 = "0.4"
zstd = "0.13"
tokio = { version = "1", features = ["full", "test-util"] }
