[package]
name = "qc-03-transaction-indexing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Shared types from the workspace
shared-types = { path = "../shared-types" }

# Cryptographic hashing (SPEC-03 Section 7.2)
sha3 = "0.10"
sha2 = "0.10"

# HMAC for IPC signature verification (IPC-MATRIX.md)
hmac = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# LRU cache for bounded tree storage (INVARIANT-5)
lru = "0.12"

# Parallel tree construction (Phase 1 Feature)
rayon = "1.10"

# UUID for correlation IDs
uuid = { version = "1.0", features = ["v4"] }

# Async trait for outbound ports
async-trait = "0.1"

# Logging
log = "0.4"

# Hex encoding for debug output
hex = "0.4"

[dev-dependencies]
# Testing
tokio = { version = "1", features = ["full", "test-util"] }
