[package]
name = "qc-04-state-management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
hex = "0.4"
# Phase 1: Advanced Features
rayon = "1.10"  # Parallel storage root computation
lru = "0.12"    # Versioned state cache

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
uuid = { version = "1.0", features = ["v4"] }
bincode = "1.3"

