[package]
name = "qc-08-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
parking_lot = "0.12"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
