[package]
name = "qc-09-finality"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Finality Gadget - Casper FFG with circuit breaker"

[dependencies]
shared-types = { path = "../shared-types" }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
parking_lot = "0.12"
tracing = "0.1"
bitvec = "1.0"
uuid = { version = "1.0", features = ["v4"] }
bincode = "1.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
