[package]
name = "qc-11-smart-contracts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Smart Contract Execution (Subsystem 11) - EVM implementation"

[features]
default = []
metrics = ["prometheus"]

[dependencies]
# Shared types from the project
shared-types = { path = "../shared-types" }
shared-bus = { path = "../shared-bus" }

# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
sha3 = "0.10"
sha2 = "0.10"
primitive-types = { version = "0.12", features = ["serde"] }

# Error handling
thiserror = "1"

# UUID for correlation IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

# Zero-Knowledge Proofs (for private transactions)
qc-zkp = { path = "../qc-zkp" }

# Metrics (optional)
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

