[package]
name = "qc-12-transaction-ordering"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }

# Types
primitive-types = { version = "0.12", features = ["serde"] }

# Async
tokio = { version = "1.0", features = ["sync", "rt"] }

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
proptest = "1.0"
serde_json = "1.0"
