[package]
name = "qc-13-light-client-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Light Client SPV Sync (Subsystem 13) - Merkle proofs, multi-node consensus"

[dependencies]
# Shared types from the project
shared-types = { path = "../shared-types" }

# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Cryptography for Merkle proofs
sha2 = "0.10"

# Error handling
thiserror = "1"

# UUID for correlation IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

# Collections
lru = "0.12"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.5"

[features]
default = []
