[package]
name = "qc-14-sharding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sharding Subsystem (Subsystem 14) - Horizontal scaling via state sharding"

[dependencies]
# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Cryptography for hashing
sha3 = "0.10"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"

# Concurrency
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"

[features]
default = []
